# common-rs

./: .gitignore  Cargo.toml  README.md
.github/actions/: pre-publish.yaml
.github/workflows/: aws-crate-io.yml  common-publish.yaml  publish.yml
example/: Cargo.toml  build.rs
example/proto/: sample.proto
example/src/: http.rs  main.rs
example/src/svc/: mod.rs  svc.rs
fluvio-stream/: Cargo.toml
fulltext/: Cargo.toml
fulltext/src/: lib.rs
grpc/: Cargo.toml
grpc/src/: lib.rs
grpcs/: Cargo.toml
grpcs/src/: lib.rs
grpcs/src/test/: mod.rs  svc.rs
http/: Cargo.toml
http/src/: lib.rs
https/: Cargo.toml
https/src/: lib.rs
kafka/: Cargo.toml  README.md
kafka/src/: consumer.rs  error.rs  lib.rs  producer.rs
log/: Cargo.toml
log/src/: lib.rs
novax-log/: Cargo.toml
novax-services/: Cargo.toml  README.md
novax-services/src/: error.rs  lib.rs  svc.rs
ocr/: Cargo.toml
ocr/src/: lib.rs
rdkafka/: Cargo.toml
rdkafka/src/: consumer.rs  error.rs  lib.rs  producer.rs
redis/: Cargo.toml
redis-async/: Cargo.toml
redis-async/src/: lib.rs
redis/src/: lib.rs
reqwest/: Cargo.toml
reqwest/src/: lib.rs
rocksdb/: Cargo.toml
rocksdb/src/: lib.rs
rsa/: Cargo.toml
rsa-async/: Cargo.toml
rsa-async/src/: lib.rs
rsa/src/: lib.rs
scylla/: Cargo.toml
scylla/src/: error.rs  lib.rs
signature/: Cargo.toml
signature/src/: lib.rs
sqlx-mysql/: Cargo.toml
sqlx-mysql/src/: lib.rs
sqlx-postgres/: Cargo.toml
sqlx-postgres/src/: lib.rs
storage/: Cargo.toml
storage/src/: lib.rs
tokio/: Cargo.toml
tokio/src/: lib.rs
websocket/: Cargo.toml
websocket/src/: lib.rs
