[workspace]
resolver = "2"
members = [ 
    "example",
    "grpc",
    "http",
    "kafka", "log",
    "rdkafka",
    "scylla", "tokio"
]
exclude = [
    "fulltext", "redis-async", "sqlx-mysql", "sqlx-postgres", "websocket"
]

[workspace.dependencies]
thiserror = "1.0.63"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.40.0", features = ["full"] }
