[workspace]
resolver = "2"
members = [
    "example",
    "grpc", "grpcs",
    "http", "https",
    "rdkafka", "kafka",
    "redis", "redis-async",
    "log", "reqwest", "rsa", "rsa-async", 
    "scylla", "sqlx-mysql", "sqlx-postgres",
    "signature", "tokio"
]
exclude = [
    "fulltext", "websocket",
]

[workspace.dependencies]
thiserror = "1.0.63"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.40.0", features = ["full"] }
