[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
novax-log = { path="../log" }
novax-http = { path="../http" }
novax-grpc = { path="../grpc" }
serde = { workspace=true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower-http = { version = "0.5.2", features = ["cors"] }
novax-tokio = { version = "0.0.1" }
