[package]
name = "novax-grpcs"
version = "0.0.1"
edition = "2021"
description = "grpcs for mutual TLS"
license = "Apache-2.0"
repository = "https://github.com/novax-exchange/common-rs"

[dependencies]
tonic = { version = "0.12.2", features = ["tls", "router", "server"] }

[dev-dependencies]
novax-tokio = { version = "0.0.1" }
prost = "0.13.3"
prost-types = "0.13.3"


[features]
default = []
tests = []