[package]
name = "novax-services"
description = "a combine set of services protocol"
version = "0.0.21"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "macros"] }
futures = "0.3.30"
# novax-log = { path="../novax-log" }
novax-log = { version="0.0.2" }
prost = "0.13.1"
prost-types = "0.13.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"
tower-http = { version = "0.5.2", features = ["cors"] }

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }

[features]
default = ["grpc"]
grpc=[]
http=[]
