[package]
name = "novax-sqlx-postgres"
version = "0.0.1"
edition = "2021"
description = "postgres utility"
license = "Apache-2.0"

[dependencies]
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }

[dev-dependencies]
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
